Fixed Vis height so text isn't cut off

--- a/AV/AlgAnal/ProblemAlgorithmCON.css
+++ b/AV/AlgAnal/ProblemAlgorithmCON.css
@@ -3,7 +3,7 @@
 }
 
 #ProblemAlgorithmCON .jsavline{
-  height: 120px;
+  height: 130px;
 }
 
 #ProblemAlgorithmCON .jsavhorizontalarray .jsavnode{
